# memoboard

./: .gitignore  LICENSE  README.md  build-tauri-no-install.bat  build-tauri.bat  memoboard_v1.0.1_complex_retest_checklist.md  package-lock.json  package.json  run-tauri-dev.bat
scratch/: analyze_header.py  analyze_window_offsets.py  capture.ps1  check_window_bounds.ps1  click_guide.ps1  click_guide.py  click_guide_tab.ps1  click_relative.py  crop_memoboard.py  find_all_tauri_windows.py  find_green_icon.py  focus_and_capture.ps1  force_topmost_capture.ps1  get_window_rect.ps1  list_windows.ps1  move_and_capture.ps1  print_memoboard_handle.ps1  print_screen.ps1  run_and_wait.ps1  run_click.ps1
scratch/shared_A/: manifest.json
scratch/shared_A/notes/: smqf6ji5xvxms6.json  smqf6ji7c71p4n.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/css/: app.css
src/js/: 00-tauri-native.js  01-storage.js  02-store-services.js  03-backup.js  04-utils-markdown.js  05-render-panels.js  06-calendar.js  07-editor-trash.js  08-drag-service.js  09-main-sidebar-events.js  10-header-io-notification.js  11-commands-help-keys.js  12-init.js  13-shared-board.js
tools/: audit-static.js  check-renderer-js.js  manifest-regression.js  markdown-regression.js  mermaid-regression.js  regression-scenarios.js  vendor-markdown-it.js  vendor-mermaid.js
