[package]
name = "memoboard"
version = "1.0.0"
description = "Memoboard Tauri desktop app"
authors = ["Yomiai"]
license = "MIT"
edition = "2021"


[build-dependencies]
# Disable default codegen compression so the build does not pull the Rust `brotli` crate.
tauri-build = { version = "2", default-features = false }

[dependencies]
# Keep Tauri default features off to avoid the default `compression` feature.
# `compression` pulls `brotli`, which currently fails to compile on some fresh Windows builds
# because alloc-no-stdlib 2.x and 3.x can be resolved together.
tauri = { version = "2", default-features = false, features = ["wry", "custom-protocol", "tray-icon", "image-png", "image-ico", "common-controls-v6", "dynamic-acl"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "6"
raw-window-handle = "0.6"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
